app/assets/stylesheets/pages/scorebook_page.scss
#scorebook {
	.icons-wrapper.score-legend {
		padding-bottom: 30px;
		border-bottom: 1px solid rgb(206,206,206);
	}

	.icons-wrapper.icon-legend {
		.icons {
			display: flex;
			align-items: center;
			justify-content: space-between;
			.icon {
				display: flex;
				align-items: center;
			}
		}
	}

	.dropdown-menu {
		margin-left: 15px;
	}

	.student-name {
		margin-bottom: 1em;
	}

	.date-range-filter {
		padding-left: 15px;
		.datepicker-container {
			.datepicker-and-x {
				position:relative;
			}
			input {
				height: 40px;
				width: 100%;
				padding-left: 25px;
				background-position: 90% 45%;
			}
			input.date-is-selected {
				background-image: none;
			}
			.icon-x-gray {
				height: 20px;
				width: 20px;
				position: absolute;
				right: 8%;
				top:6%;
			}
		}
	}
}

// The following is the CSS for the AirBNB 'react-dates' component.
// We are putting it here because we are going to customize it
// significantly in order to make it do what we want it to do.

$accentcolor: #00a699;

// This style is for the list of options beneath the calendar.
.calendar-prefill-options {
	margin-top: 15px;
	padding: 0 20px;
	text-align: center;

	.calendar-prefill-option {
		border-radius: 5px;
		border: 1px solid #eee;
		color: #666;
		display: inline-block;
		font-size: 14px;
		font-weight: 600;
		margin: 3px;
		padding: 8px;
		transition: all 0.3s ease;

		&:hover {
			background-color: #fefefe;
			border-color: #ddd;
			color: #333;
		}
	}
}

.CalendarDay {
  border: 1px solid #e4e7e7;
  padding: 0;
  box-sizing: border-box;
  color: #565a5c;
  cursor: pointer; }

.CalendarDay__button {
  position: relative;
  height: 100%;
  width: 100%;
  text-align: center;
  background: none;
  border: 0;
  margin: 0;
  padding: 0 !important; // Added '!important' to override a super widely scoped style elsewhere in our app.
  color: inherit;
  font: inherit;
  line-height: normal;
  overflow: visible;
  cursor: pointer;
  box-sizing: border-box; }
  .CalendarDay__button:active {
    outline: 0; }

.CalendarDay--highlighted-calendar {
  background: #ffe8bc;
  color: #565a5c;
  cursor: default; }
  .CalendarDay--highlighted-calendar:active {
    background: #007a87; }

.CalendarDay--outside {
  border: 0;
  cursor: default; }
  .CalendarDay--outside:active {
    background: #fff; }

.CalendarDay--hovered {
  background: #eee;
  border: 1px double #ddd;
  color: #666; }

.CalendarDay--blocked-minimum-nights {
  color: #cacccd;
  background: #fff;
  border: 1px solid #e4e7e7;
  cursor: default; }
  .CalendarDay--blocked-minimum-nights:active {
    background: #fff; }

.CalendarDay--selected-span {
  background: $quillgreen;
  border: 1px double $quillgreen;
  color: $white; }
  .CalendarDay--selected-span.CalendarDay--hovered, .CalendarDay--selected-span:active {
    background: $accentcolor;
    border: 1px double $accentcolor; }
  .CalendarDay--selected-span.CalendarDay--last-in-range {
    border-right: $quillgreen; }

.CalendarDay--hovered-span,
.CalendarDay--after-hovered-start {
  background: $quillgreen;
  border: 1px double $quillgreen;
  color: $white; }
  .CalendarDay--hovered-span:active,
  .CalendarDay--after-hovered-start:active {
    background: #80e8e0; }

.CalendarDay--selected-start,
.CalendarDay--selected-end,
.CalendarDay--selected {
  background: $accentcolor;
  border: 1px double $accentcolor;
  color: #fff; }
  .CalendarDay--selected-start:active,
  .CalendarDay--selected-end:active,
  .CalendarDay--selected:active {
    background: $accentcolor; }

.CalendarDay--blocked-calendar {
  background: #cacccd;
  color: #82888a;
  cursor: default; }
  .CalendarDay--blocked-calendar:active {
    background: #cacccd; }

.CalendarDay--blocked-out-of-range {
  color: #cacccd;
  background: #fff;
  border: 1px solid #e4e7e7;
  cursor: default; }
  .CalendarDay--blocked-out-of-range:active {
    background: #fff; }

.CalendarMonth {
  text-align: center;
  padding: 0 13px;
  vertical-align: top;
  -moz-user-select: none;
  -webkit-user-select: none;
  -ms-user-select: none;
  user-select: none; }
  .CalendarMonth table {
    border-collapse: collapse;
    border-spacing: 0;
    caption-caption-side: initial; }

.CalendarMonth--horizontal:first-of-type,
.CalendarMonth--vertical:first-of-type {
  position: absolute;
  z-index: -1;
  opacity: 0;
  pointer-events: none; }

.CalendarMonth--horizontal {
  display: inline-block;
  min-height: 100%; }

.CalendarMonth--vertical {
  display: block; }

.CalendarMonth__caption {
  color: #3c3f40;
  margin-top: 7px;
  font-size: 18px;
  text-align: center;
  margin-bottom: 2px;
  caption-side: initial; }

.CalendarMonth--horizontal .CalendarMonth__caption,
.CalendarMonth--vertical .CalendarMonth__caption {
  padding: 15px 0; }

.CalendarMonth--vertical-scrollable .CalendarMonth__caption {
  padding: 5px 0; }

.CalendarMonthGrid {
  background: #fff;
  z-index: 0;
  text-align: left; }

.CalendarMonthGrid--animating {
  -webkit-transition: -webkit-transform 0.2s ease-in-out;
  -moz-transition: -moz-transform 0.2s ease-in-out;
  transition: transform 0.2s ease-in-out;
  z-index: 1; }

.CalendarMonthGrid--horizontal {
  position: absolute;
  left: 9px; }

.CalendarMonthGrid--vertical {
  margin: 0 auto; }

.CalendarMonthGrid--vertical-scrollable {
  margin: 0 auto;
  overflow-y: scroll; }

.DayPicker {
  background: #fff;
  position: relative;
  text-align: left; }

.DayPicker > div {
	display: flex;
	flex-direction: column-reverse;
}

.DayPicker--horizontal {
  background: #fff;
  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05), 0 0 0 1px rgba(0, 0, 0, 0.07);
  border-radius: 3px; }
  .DayPicker--horizontal.DayPicker--portal {
    box-shadow: none;
    position: absolute;
    left: 50%;
    top: 50%; }

.DayPicker--vertical.DayPicker--portal {
  position: initial; }

.DayPicker__focus-region {
  outline: none; }

.DayPicker__week-headers {
  position: relative; }

.DayPicker--horizontal .DayPicker__week-headers {
  margin-left: 9px; }
/* ... */

